# STRUCTURECRAFT

./: .gitignore  big_plan.md  engineering_notes.md  lucas_notes.md  pyproject.toml  readme.md  running.md
api/: main.py  requirements.txt
app/: __init__.py  config.py  main.py
app/components/: __init__.py  design_card.py  metrics_panel.py  model_viewer.py  parameter_inputs.py  (+1 more)
artifacts/: canopy_cutlist.csv  canopy_search_results.csv  guided_results.csv  random_results.csv  results.csv  top10.md
demos/: _ml_utils.py  guided_search.py  run_canopy_search.py  run_canopy_single.py  run_portal_frame.py  run_portal_parametric.py  run_portal_search.py  run_postprocessing.py  run_simply_supported.py  run_single_case.py  run_space_truss.py  run_udl_beam.py  run_udl_validation.py  train_surrogate.py
mini_branch/: __init__.py  assembly.py  catalog.py  checks.py  diagrams.py  elements.py  explore.py  explore3d.py  loads.py  model.py  pareto.py  post.py  section.py  solve.py  viz.py
mini_branch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
planning/: day1.md
planning_and_docs/: day2.md  day2_plan.md  day3.md  day3_plan.md  day4_observations.md  day4_plan.md  phase_e_plan.md
tests/: test_cantilever.py  test_catalog.py  test_explore.py  test_invariants.py  test_loads.py  test_ml_smoke.py  test_portal_frame_equilibrium.py  test_postprocessing.py  test_search_pipeline_smoke.py  test_simply_supported.py  test_simply_supported_udl.py  test_truss3d_tetrahedron.py
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+45 files in other folders)
