[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini_branch"
version = "0.0.1"
description = "StructureCraft - Real-time 3D Structural Analysis"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "scipy>=1.10.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
structurecraft = "app.main:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["mini_branch", "mini_branch.kernel", "mini_branch.v3d", "mini_branch.checks", "mini_branch.generative", "mini_branch.viz"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]